feat: edit .btn-bar

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -37,6 +37,10 @@ html, body
     border-left 1px solid #e0e0e0
     border-right 1px solid #e0e0e0
     .btn-bar
+      display: flex;
+      flex-flow: row-reverse;
+      gap: 10px;
+      align-items: center;
       height 45px !important
       line-height 45px
       font-size 18px
